# MACIS

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md
.github/: .licenserc.yaml
.github/workflows/: add_licenses.yaml  build_and_test.yml  build_and_test_compiler_zoo.yml  clang_format_lint.yaml
attic/: README.md
attic/cmake/: asci-config.cmake.in
attic/main/: CMakeLists.txt  cmzed_main.c++
cmake/: asci-cmake-modules.cmake  asci-config.cmake.in  asci-mdspan.cmake  asci-spdlog.cmake  cmzed-config.cmake.in  macis-catch2.cmake  macis-cmake-modules.cmake  macis-config.cmake.in  macis-ips4o.cmake  macis-mdspan.cmake  macis-spdlog.cmake
docs/: mainpage.docx
inc/: CMakeLists.txt
inc/cmz_ed/: CMZedConfig.h.in  bandlan.h++  combins.h++  ed.h++  eigsolver.h++  freq_grids.h++  hamil.h++  integrals.h++  lanczos.h++  lobpcg_call.h++  rdms.h++  slaterdet.h++  utils.h++
inc/dbwy/: asci_body.hpp  asci_util.hpp  bitset_operations.hpp  cmz_compat_csr_matrix.hpp  davidson.hpp  double_loop.hpp  gf.h++  hamiltonian_generator.hpp  residue_arrays.hpp  sd_build.hpp  sd_operations.hpp
inputs/: f2.asci.inp  pyscf2asci_fci.sh
main/: CMakeLists.txt  cmzed_main.c++  run_asci.c++  run_asci_gf.c++
src/: CMakeLists.txt  casscf.cxx  diis.hpp  fcidump.cxx  fock_matrices.cxx  mcscf.cxx  mcscf_impl.hpp  moller_plesset.cxx  orbital_energies.cxx  orbital_gradient.cxx  orbital_hessian.cxx  orbital_hessian.hpp  orbital_rotation_utilities.cxx  orbital_rotation_utilities.hpp  orbital_steps.cxx  orbital_steps.hpp  transform.cxx
src/asci/: CMakeLists.txt  fcidump.cxx  orbital_gradient.cxx  orbital_hessian.cxx  orbital_rotation_utilities.cxx
src/asci/bfgs/: bfgs.hpp  bfgs_hessian.hpp  bfgs_traits.hpp  line_search.hpp
src/bfgs/: bfgs.hpp  bfgs_hessian.hpp  line_search.hpp
src/cmz_ed/: bandlan.c++  combins.c++  ed.c++  eigsolver.c++  hamil.c++  lobpcg_call.c++  rdms.c++  slaterdet.c++  utils.c++
src/lobpcgxx/: CMakeLists.txt  LICENSE  README.md
src/lobpcgxx/examples/: tester.cpp
src/lobpcgxx/include/lobpcgxx/: cholqr.hpp  convergence.hpp  driver.hpp  lobpcg.hpp  operator.hpp  rayleigh_ritz.hpp  residuals.hpp  rotate_basis.hpp  simplified_interface.hpp  type_traits.hpp
src/macis/: CMakeLists.txt  casscf.cxx  fcidump.cxx  fock_matrices.cxx  moller_plesset.cxx  orbital_energies.cxx  orbital_gradient.cxx  orbital_hessian.cxx  orbital_rotation_utilities.cxx  orbital_steps.cxx  transform.cxx  trexio.cxx
src/macis/bfgs/: bfgs.hpp  bfgs_hessian.hpp  bfgs_traits.hpp  line_search.hpp
src/macis/gf/: bandlan.cxx  eigsolver.cxx  gf.cxx
src/macis/hamiltonian_generator/: base.cxx  base.ipp  fast_diagonals.ipp
src/macis/mcscf/: casscf.cxx  fock_matrices.cxx  orbital_energies.cxx  orbital_gradient.cxx  orbital_hessian.cxx  orbital_rotation_utilities.cxx  orbital_steps.cxx
src/macis/model/: hubbard.cxx
src/sparsexx/: CMakeLists.txt
src/sparsexx/cmake/: sparsexx-config.cmake.in
src/sparsexx/cmake/modules/: CommonFunctions.cmake  FindBLACS.cmake  FindBLAS.cmake  FindLAPACK.cmake  FindScaLAPACK.cmake
src/sparsexx/cmake/modules/linalg-modules/: FindBLIS.cmake  FindIBMESSL.cmake  FindIntelMKL.cmake  FindOpenBLAS.cmake  FindReferenceBLAS.cmake  FindReferenceLAPACK.cmake
src/sparsexx/examples/: CMakeLists.txt  test_dist.cxx
src/sparsexx/examples/attic/: CMakeLists.txt  asci_proxy.cxx  test.cxx  test_dist.cxx  test_evsl.cxx  test_lpcg.cxx  test_ls.cxx  test_mkl_feast.cxx  test_norm.cxx  test_perm.cxx  test_pfeast.cxx  test_pfeast_3p.cxx  test_spmm.cxx  test_submat.cxx
src/sparsexx/include/sparsexx/: sparsexx_config.hpp.in
src/sparsexx/include/sparsexx/attic/: dist_sparse_matrix.hpp  pspmbv.hpp
src/sparsexx/include/sparsexx/io/: read_binary_triplets.hpp  read_mm.hpp  read_rb.hpp  write_binary_triplets.hpp  write_dist_mm.hpp  write_mm.hpp
src/sparsexx/include/sparsexx/matrix_types/: conversions.hpp  coo_conversions.hpp  coo_matrix.hpp  coo_matrix_ops.hpp  csc_matrix.hpp  csr_matrix.hpp  dense_conversions.hpp  dist_sparse_matrix.hpp  type_fwd.hpp  type_traits.hpp
src/sparsexx/include/sparsexx/spblas/: pspmbv.hpp  spmbv.hpp  type_traits.hpp
src/sparsexx/include/sparsexx/spsolve/: bunch_kaufman.hpp  cholesky.hpp
src/sparsexx/include/sparsexx/util/: graph.hpp  hash.hpp  mpi.hpp  permute.hpp  string.hpp  submatrix.hpp
src/sparsexx/include/sparsexx/wrappers/: mkl_dss_solver.hpp  mkl_exceptions.hpp  mkl_sparse_matrix.hpp  mkl_sparse_matrix_pimpl.hpp  mkl_type_traits.hpp  mkl_types.hpp
src/sparsexx/src/: metis_wrapper.cxx
src/sparsexx/tests/: CMakeLists.txt  test_graph.cxx  test_io.cxx  test_spmbv.cxx  test_types.cxx  test_util.cxx  ut_main.cxx
src/sparsexx/tests/mycielskian3/: mycielskian3.mtx
test/: CMakeLists.txt
test/test_GF/: test_GF.c++
test/test_Hamil/: input.in.in  test_Hamil.c++
test/test_Slater/: test_Slater.c++
test/test_asci/: test_asci.c++
test/test_bandlan/: test_bandlan.c++
test/test_c2/: input.in.in
test/test_cr2_grow/: test_cr2_grow.c++
test/test_cr2_new/: input.in.in  test_cr2_new.c++
test/test_ed/: test_ed.c++
test/test_fast_diags/: input.in.in  test_fast_diags.c++
test/test_getGFbasis/: input.in.in
test/test_h2o/: test_h2o.c++
test/test_hfbyen/: test_hfbyen.c++
test/test_lobpcg/: FCIDUMP.fcidump  input.in.in  test_lobpcg.c++
test/test_natOrbRot/: imp10orbs.fcidump  input.in.in  test_natOrbRot.c++
test/test_parallel/: test_parallel.c++
test/test_parallel_new/: csr_hamiltonian.hpp  davidson.hpp  double_loop.hpp  hamiltonian_generator.hpp  serial_tests.hpp  test_parallel_new.c++
tests/: CMakeLists.txt  asci.cxx  bitset_operations.cxx  csr_hamiltonian.cxx  davidson.cxx  dist_quickselect.cxx  double_loop.cxx  fcidump.cxx  fcidump_to_trexio.cxx  fock_matrices.cxx  hubbard.cxx  ini_input.cxx  ini_input.hpp  mcscf.cxx  read_wavefunction.cxx  sd_build.cxx  sd_operations.cxx  standalone_driver.cxx  topk.cxx  transform.cxx  ut_common.hpp  ut_common.hpp.in  ut_main.cxx
tests/cmake/discovery/: CMakeLists.txt  macis_link_tester.cxx
tests/cmake/subproject/: CMakeLists.txt  asci_link_tester.cxx  macis_link_tester.cxx
(+155 files in other folders)
